rollback to webpack 3.10, webpack v4 not working

--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,8 @@
 	"presets": [
 		"babel-preset-env",
 		"stage-2",
-		"react"
-		/*, "env"*/
-	]
-	//"plugins": ["transform-object-rest-spread"]
+		"react",
+		"env"
+	],
+	"plugins": ["transform-object-rest-spread"]
 }
