--- a/package.json
+++ b/package.json
@@ -1,102 +1,88 @@
 {
-	"name": "onenapp",
-	"version": "0.0.0",
-	"private": true,
-	"browser": "./index.js",
-	"main": "./index.js",
-	"devDependencies": {
-		"autoprefixer": "^8.6.5",
-		"babel-cli": "^6.26.0",
-		"babel-core": "6.26.0",
-		"babel-jest": "^23.0.1",
-		"babel-loader": "7.1.2",
-		"babel-plugin-transform-object-rest-spread": "^6.26.0",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-react": "6.24.1",
-		"babel-preset-stage-2": "^6.24.1",
-		"babel-register": "^6.26.0",
-		"copy-webpack-plugin": "4.3.1",
-		"css-hot-loader": "1.3.5",
-		"css-loader": "^0.28.11",
-		"directory-named-webpack-plugin": "^4.0.0",
-		"enhanced-resolve": "^4.1.0",
-		"extract-text-webpack-plugin": "^4.0.0-beta.0",
-		"file-loader": "^1.1.11",
-		"html-loader": "0.5.4",
-		"html-webpack-plugin": "^3.2.0",
-		"jquery": "^1.9.1",
-		"nib": "^1.1.2",
-		"node-sass": "4.7.2",
-		"node-sass-chokidar": "^1.3.0",
-		"nodemon": "^1.17.5",
-		"npm-run-all": "^4.1.3",
-		"parallelshell": "^3.0.2",
-		"postcss-loader": "^2.1.5",
-		"precss": "^3.1.2",
-		"pug": "^2.0.0-rc.4",
-		"react-scripts": "^1.1.4",
-		"rimraf": "2.6.2",
-		"sass-loader": "^6.0.7",
-		"source-list-map": "2.0.0",
-		"style-loader": "^0.19.1",
-		"stylus": "0.54.5",
-		"tapable": "^1.0.0-beta.5",
-		"uglify-js": "3.3.7",
-		"url-loader": "0.6.2",
-		"webpack": "^4.15.1",
-		"webpack-cli": "^3.0.8",
-		"webpack-dev-middleware": "^3.1.3",
-		"webpack-dev-server": "2.9.7"
-	},
-	"dependencies": {
-		"@coreui/coreui": "^2.0.2",
-		"@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
-		"@coreui/icons": "0.2.0",
-		"@coreui/react": "^2.0.4",
-		"body-parser": "^1.18.2",
-		"bootstrap": "4.0.0-beta.3",
-		"chart.js": "^2.7.2",
-		"classnames": "^2.2.6",
-		"cookie-parser": "^1.4.3",
-		"core-js": "^2.5.7",
-		"debug": "~2.6.9",
-		"enzyme": "^3.3.0",
-		"enzyme-adapter-react-16": "^1.1.1",
-		"express": "^4.16.2",
-		"flag-icon-css": "2.9.0",
-		"font-awesome": "4.7.0",
-		"history": "4.7.2",
-		"http-errors": "~1.6.2",
-		"lodash": "^4.17.5",
-		"morgan": "^1.9.0",
-		"prop-types": "^15.6.2",
-		"react": "^16.4.1",
-		"react-chartjs-2": "^2.7.2",
-		"react-dom": "^16.4.1",
-		"react-loadable": "^5.4.0",
-		"react-router-config": "^1.0.0-beta.4",
-		"react-router-dom": "^4.3.1",
-		"react-test-renderer": "^16.4.1",
-		"react-transition-group": "2.2.1",
-		"reactstrap": "^6.1.0",
-		"serve-favicon": "^2.4.5",
-		"simple-line-icons": "^2.4.1"
-	},
-	"scripts": {
-		"dev": "webpack -d --progress --watch --profile --json > compilation-stats.json --env.dev",
-		"start": "webpack-dev-server --progress --color --inline --env.dev",
-		"build:old": "webpack -p --progress --env.prod",
-		"clean": "rimraf ./build",
-		"build": "babel . -d build --ignore node_modules",
-		"build:watch": "babel . -d build --watch --ignore node_modules,build",
-		"build:client": "webpack-cli --config ./webpack.config.js --display-error-details",
-		"build:watch:client": "webpack-cli --config ./webpack.config.js -w --display-error-details",
-		"build:prod": "npm run clean && npm run build && npm run build:client",
-		"start:dev": "parallelshell \"npm run build:watch\" \"npm run build:watch:client\" \"nodemon ./build/index.js\"",
-		"start:dev2": "npm run build:prod && webpack-dev-server"
-	},
-	"engines": {
-		"node": ">= 8.9.0",
-		"npm": ">= 5.6.0"
-	}
+  "name": "@coreui/react",
+  "version": "1.0.8",
+  "description": "Open Source Bootstrap Admin Template",
+  "author": "Łukasz Holeczek",
+  "homepage": "http://coreui.io",
+  "copyright": "Copyright 2017 creativeLabs Łukasz Holeczek",
+  "license": "MIT",
+  "private": true,
+  "devDependencies": {
+    "@coreui/coreui": "^2.0.2",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
+    "@coreui/icons": "0.2.0",
+    "@coreui/react": "^2.0.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "chart.js": "^2.7.2",
+    "copy-webpack-plugin": "4.3.1",
+    "css-hot-loader": "1.3.5",
+    "css-loader": "0.28.8",
+    "directory-named-webpack-plugin": "^4.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.6",
+    "html-loader": "0.5.4",
+    "html-webpack-plugin": "2.30.1",
+    "jquery": "^1.9.1",
+    "node-sass": "4.7.2",
+    "nodemon": "^1.14.11",
+    "parallelshell": "^3.0.2",
+    "pug": "^2.0.0-rc.4",
+    "react-loadable": "^5.4.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-test-renderer": "^16.4.1",
+    "rimraf": "2.6.2",
+    "sass-loader": "6.0.6",
+    "source-list-map": "2.0.0",
+    "style-loader": "0.19.1",
+    "uglify-js": "3.3.7",
+    "url-loader": "0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "2.9.7"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "bootstrap": "4.0.0-beta.3",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "flag-icon-css": "2.9.0",
+    "font-awesome": "4.7.0",
+    "history": "4.7.2",
+    "lodash": "^4.17.5",
+    "morgan": "^1.9.0",
+    "nib": "^1.1.2",
+    "react": "^16.2.0",
+    "react-chartjs-2": "2.7.0",
+    "react-dom": "16.2.0",
+    "react-router-dom": "4.2.2",
+    "react-transition-group": "2.2.1",
+    "reactstrap": "5.0.0-alpha.4",
+    "serve-favicon": "^2.4.5",
+    "simple-line-icons": "2.4.1",
+    "stylus": "^0.54.5"
+  },
+  "scripts": {
+    "dev": "webpack -d --progress --watch --profile --json > compilation-stats.json --env.dev",
+    "start": "webpack-dev-server --progress --color --inline --env.dev",
+    "build:old": "webpack -p --progress --env.prod",
+    "clean": "rimraf ./build",
+    "build": "babel . -d build --ignore node_modules",
+    "build:watch": "babel . -d build --watch --ignore node_modules",
+    "build:client": "webpack --config ./webpack.config.js/ -d",
+    "build:watch:client": "webpack --config ./webpack.config.js/ --watch",
+    "build:prod": "npm run clean && npm run build && npm run build:client",
+    "start:dev": "parallelshell \"npm run build:watch\" \"npm run build:watch:client\" \"nodemon ./build/index.js\""
+  },
+  "engines": {
+    "node": ">= 8.9.0",
+    "npm": ">= 5.6.0"
+  }
 }
