v0 coreui working, webpack successfully built

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-	"presets": [
-		"babel-preset-env",
-		"stage-2",
-		"react",
-		"env"
-	],
+	"presets": ["stage-2", "react", "env"],
 	"plugins": ["transform-object-rest-spread"]
 }
